--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yuanhang.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Yuanhang's Blog
+subtitle: Random speaking
+author: Yuanhang
 simple_search: http://google.com/search
 description:
 
